--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
     "axios": "^1.6.0",
-    "nodemailer": "^6.9.5"
+    "nodemailer": "^6.9.5",
+    "@types/cors": "^2.8.17",
+"@types/pg": "^8.11.6",
+"@types/nodemailer": "^6.4.14"
+
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
